# FairMoney

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  index.html  package-lock.json  package.json
.github/: deploy.yml
.github/workflows/: deploy.yml
Backend/: .editorconfig  .flake8  .gitignore  Dockerfile  requirements.txt
Backend/src/: main.py
Backend/src/controller/: accounting_controller.py  group_controller.py  payments_controller.py
Backend/src/models/: accounting.py  group.py  payment.py  transaction.py  user.py
Backend/src/requestHandler/: accounting_handler.py  group_handler.py  payments_handler.py
Backend/src/shared/: db_query_service.py  db_session_manager.py  model_converter.py
Backend/tests/: conftest.py  pytest.ini
Backend/tests/files/: sqlite_integration.db
Backend/tests/fixtures/: database_fixtures.py  test_client.py
Backend/tests/integration/: test_accouting_controller.py  test_group_controller.py  test_payments_controller.py
Backend/tests/unit/: test_create_transactions.py  test_db_queries.py  test_db_session_manager.py
Frontend/: Dockerfile  eslint.config.js  index.html  jest.config.js  package-lock.json  package.json  vite.config.js
Frontend/docker/: nginx.conf
Frontend/src/: index.scss  main.jsx
src/: App.vue  app.rs  main.rs  main.ts
src/assets/: base.css  main.css
src/components/: button.rs
src/logic/: Block.ts  Blockchain.ts  Transaction.ts  blockchain.rs
src/router/: index.ts
src/stores/: blockchain.ts
src/views/: GroupView.vue  HomeView.vue  group_create.rs  home.rs  mod.rs
(+70 files in other folders)
