[package]
name = "fairmoney"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.5", features = ["csr"] }
leptos_router = "0.7.5"
rand = "0.8.0"
rsa = "0.9.7"
serde_json = "1.0.138"
sha2 = { version = "0.10.8", features = ["oid"] }
serde = { version = "1.0.217", features = ["derive"] }
base64 = "0.22.1"
leptos-use = "0.15.6"
codee = "0.3.0"
